--- a/src/main/resources/META-INF/resources/hello.xhtml
+++ b/src/main/resources/META-INF/resources/hello.xhtml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:p="http://primefaces.org/ui">
+
+<html xml:lang="en" 
+      xmlns="http://www.w3.org/1999/xhtml" 
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core" 
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:pe="http://primefaces.org/ui/extensions">
 
 <h:head>
     <title>PrimeFaces Hello World Example</title>
 </h:head>
 
 <h:body>
-    <h:form id="helloworld-form">
 
+    <!-- h:link this requies a valid logout page in project, otherweis a span will be generated 
+    an anchor element will be generated with /logout.xhtml at the end. -->
+    <!--     <h:link value = "Logout" outcome = "/logout" />  -->
+
+    <!-- p.link will generate <a href="/logout" class="ui-link ui-widget" title="Logout">Logout</a>
+     in spring-boot /logout will logout the user from session     
+      -->
+    <p:link title="Logout" href="/logout" value="Logout" />
+
+
+    <h:form id="helloworld-form">
         <p:panel header="PrimeFaces Hello World Example">
             <h:panelGrid columns="2" cellpadding="4">
                 <h:outputText value="First Name: " />
@@ -17,7 +33,7 @@
                 <h:outputText value="Last Name: " />
                 <p:inputText id="last-name" value="#{helloWorld.lastName}" />
 
-                <p:outputLabel for="basic" value="Basic"/>
+                <p:outputLabel for="basic" value="Basic" />
                 <p:datePicker id="basic" value="#{helloWorld.date}" />
 
                 <p:commandButton id="submit" value="Submit" update="greeting-panel"
