added css classes

--- a/src/main/resources/META-INF/resources/login.xhtml
+++ b/src/main/resources/META-INF/resources/login.xhtml
@@ -9,7 +9,7 @@
 
 <h:head>
   <title>Login</title>
-  <h:outputStylesheet name="/css/login.css" />
+  <h:outputStylesheet name="/css/main.css" />
 </h:head>
 
 <h:body>
