Added Registration form (in progress)

--- a/src/main/resources/META-INF/resources/login.xhtml
+++ b/src/main/resources/META-INF/resources/login.xhtml
@@ -25,6 +25,8 @@
       <p:password id="password" placeholder="Password" />
 
       <p:commandButton value="Login" ajax="false" />
+      
+      <p:link outcome="registration" value="Register"> </p:link>
     </p:panelGrid>
 
   </h:form>
