--- a/src/main/resources/META-INF/resources/products/productList.xhtml
+++ b/src/main/resources/META-INF/resources/products/productList.xhtml
@@ -18,15 +18,21 @@
 
     <div class="card">
         <h:form id="form">
-            <p:dataTable var="product" value="#{productListView.lazyProductsDataModel}" paginator="true" rows="10"
+            <p:messages id="messages" closable="true">
+                <p:autoUpdate />
+            </p:messages>
+
+            <p:dataTable id="productsTable" var="product" value="#{productListView.lazyProductsDataModel}" paginator="true" rows="10"
                 paginatorTemplate="{totalRecords} {RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
-                rowsPerPageTemplate="5,10,15" selectionMode="single" lazy="true" id="productTable">
+                rowsPerPageTemplate="5,10,15" selectionMode="single" lazy="true">
 
                 <p:column>
-                    <p:commandButton  icon="pi pi-pencil" styleClass="edit-button rounded-button ui-button-success"
+                    <p:commandButton icon="pi pi-pencil" styleClass="edit-button rounded-button ui-button-success"
                         action="#{productListView.redirectToProductView(product)}">
                     </p:commandButton>
-                    <p:commandButton class="ui-button-warning rounded-button" icon="pi pi-trash">
+                    <p:commandButton class="ui-button-warning rounded-button" icon="pi pi-trash" process="@this"
+                        oncomplete="PF('deleteProductDialog').show()">
+                        <f:setPropertyActionListener value="#{product}" target="#{productListView.selectedProduct}" />
                     </p:commandButton>
                 </p:column>
 
@@ -43,6 +49,16 @@
                 </p:column>
 
             </p:dataTable>
+
+            <p:confirmDialog widgetVar="deleteProductDialog" showEffect="fade" width="300" message="Delete the product?"
+                header="Confirm" severity="warn">
+                <p:commandButton value="Yes" icon="pi pi-check" actionListener="#{productListView.deleteProduct}" 
+                   update="productsTable"
+                    process="@this" oncomplete="PF('deleteProductDialog').hide()" />
+                <p:commandButton value="No" type="button" styleClass="ui-button-secondary" icon="pi pi-times"
+                    onclick="PF('deleteProductDialog').hide()" />
+            </p:confirmDialog>
+
         </h:form>
     </div>
 
