--- a/src/main/resources/META-INF/resources/dashboard.xhtml
+++ b/src/main/resources/META-INF/resources/dashboard.xhtml
@@ -11,6 +11,7 @@
 
 <h:body>
     <ui:include src="/templates/header.xhtml" />
-    <h2>Dashboard</h2>
+    <h2>#{dashboardView.heading}</h2>
+    <h3>#{msg['greeting']}"</h3>
 </h:body>
 </html>
