refactored class names and update README

--- a/src/main/resources/META-INF/resources/login.xhtml
+++ b/src/main/resources/META-INF/resources/login.xhtml
@@ -28,7 +28,7 @@
             <p:selectOneMenu id="options" value="#{localSelector.language}" required="true">
                 <f:selectItem itemLabel="Select Language" itemValue="" />
                 <f:selectItem itemLabel="Germany" itemValue="de_DE" />
-                <f:selectItem itemLabel="English Great Brtain" itemValue="en_GR" />
+                <f:selectItem itemLabel="English Great Brtain" itemValue="en_UK" />
                 <f:selectItem itemLabel="English US" itemValue="en_US" />
             </p:selectOneMenu>
 
