Added more messages keys

--- a/src/main/resources/META-INF/resources/dashboard.xhtml
+++ b/src/main/resources/META-INF/resources/dashboard.xhtml
@@ -12,6 +12,6 @@
 <h:body>
     <ui:include src="/templates/header.xhtml" />
     <h2>#{dashboardView.heading}</h2>
-    <h3>#{msg['greeting']}"</h3>
+    <h3>#{msg['greeting']}</h3>
 </h:body>
 </html>
