--- a/src/main/resources/META-INF/resources/products/productList.xhtml
+++ b/src/main/resources/META-INF/resources/products/productList.xhtml
@@ -14,7 +14,7 @@
 
 <h:body>
     <ui:include src="/templates/header.xhtml" />
-    <h2>Product List</h2>
+    <h2>#{msg['productlist']}</h2>
 
     <div class="card">
         <h:form id="form">
